# PTPIPCameraSync

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md  SyncCamera.py  gphoto_exceptions.hpp  gphoto_helper.cc  gphoto_helper.hpp  gphoto_if.cc  gphoto_if.hpp  gphoto_python_exports.hpp  gphoto_typedef.hpp  runSyncCamera.sh  syncPTPCamera.service
gphoto_if/: CMakeLists.txt  gphoto_exceptions.hpp  gphoto_helper.cc  gphoto_python_exports.hpp
helper_scripts/: synchPTPCamera.service
modules/: __init__.py  camera_finder.py  camera_synchronizer.py  check_signals.py  data_base.py  notification_interface.py  pushjet_notification.py
tests/: all_test.py  camera_finder_test.py  data_base_test.py  gphoto_if_test.py
